[package]
name = "changelog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48" 
reqwest = { version = "0.11.8", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
colored = "2"

