[package]
name = "changelog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # smaller optimizations

[profile.dev]
opt-level = 1 # no optimizations was just too painful in terms of flash size

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48" 
reqwest = { version = "0.11.8", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
colored = "2"
color-eyre = "0.5.11"
uuid = { version = "0.8", features = ["serde", "v4"] }

